[package]
name = "array-transpose"
version = "0.0.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
edition = "2021"
description = "A Rust package to help transpose flat arrays as if they were 2D arrays"
readme = "README.md"
repository = "https://github.com/fvilers/array-transform"
license = "MIT"
keywords = ["array", "transposition", "array-manipulations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
